--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -47,4 +47,13 @@
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">#4CAF50</item>
     </style>
+
+    <style name="TextButton" parent="Widget.MaterialComponents.Button.TextButton">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/primary_text</item>
+        <item name="android:textSize">14sp</item>
+        <item name="iconPadding">8dp</item>
+        <item name="android:gravity">start</item>
+    </style>
 </resources>
