--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,9 @@
     <color name="gray">#e0e0e0</color>
 
 
+    <color name="card_enabled">#FFFFFFFF</color>
+    <color name="card_disabled">#B3FFFFFF</color>
+
     <color name="textPrimary">#212121</color>
     <color name="itemBackground">#FFFFFF</color>
     <color name="borderColor">#E0E0E0</color>
