--- a/app/src/main/res/layout/activity_product_loss_report.xml
+++ b/app/src/main/res/layout/activity_product_loss_report.xml
@@ -7,8 +7,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#919f7d"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/primary_green"
         android:orientation="horizontal">
 
         <TextView
@@ -16,10 +16,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_centerInParent="true"
             android:text="产品损耗报表"
             android:gravity="center"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="4dp"
             android:textSize="20sp"
             android:textColor="@color/white"
             android:textStyle="bold"/>
