--- a/app/src/main/res/layout/activity_expense_report.xml
+++ b/app/src/main/res/layout/activity_expense_report.xml
@@ -8,7 +8,7 @@
     <!-- 标题 -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="?attr/actionBarSize"
         android:background="#919f7d"
         android:orientation="horizontal">
 
@@ -19,8 +19,7 @@
             android:layout_gravity="center"
             android:text="支出报表"
             android:gravity="center"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="4dp"
+            android:layout_centerInParent="true"
             android:textSize="20sp"
             android:textColor="@color/white"
             android:textStyle="bold"/>
