--- a/app/src/main/res/layout/activity_financial_report.xml
+++ b/app/src/main/res/layout/activity_financial_report.xml
@@ -14,6 +14,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_gravity="center"
             android:text="财务报表"
             android:textColor="@color/white"
             android:textSize="20sp"
