--- a/app/src/main/res/layout/activity_income_report.xml
+++ b/app/src/main/res/layout/activity_income_report.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="?attr/actionBarSize"
         android:background="#919f7d"
         android:orientation="horizontal">
 
@@ -16,11 +16,10 @@
             android:id="@+id/tv_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="收入报表"
             android:gravity="center"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="4dp"
+            android:layout_gravity="center"
+            android:layout_centerInParent="true"
+            android:text="收入报表"
             android:textSize="20sp"
             android:textColor="@color/white"
             android:textStyle="bold"/>
