--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="?attr/actionBarSize"
         android:background="@color/primary_green"
         android:gravity="center_horizontal"
         android:orientation="horizontal"
@@ -20,6 +20,8 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
             android:gravity="center"
+            android:layout_gravity="center"
+            android:layout_centerInParent="true"
             android:text="产品名称"
             android:textColor="@color/white"
             android:textSize="20sp"
@@ -31,6 +33,8 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
             android:gravity="center"
+            android:layout_gravity="center"
+            android:layout_centerInParent="true"
             android:text="产品编号"
             android:textColor="@color/white"
             android:textSize="20sp"
