--- a/app/src/main/res/layout/activity_supplier_sales.xml
+++ b/app/src/main/res/layout/activity_supplier_sales.xml
@@ -8,15 +8,8 @@
     <RelativeLayout
         android:id="@+id/relativeLayout2"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@color/yu">
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="20dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="18dp"
-            app:srcCompat="@drawable/back" />
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/primary_green">
 
         <TextView
             android:layout_width="wrap_content"
@@ -24,7 +17,7 @@
             android:layout_centerInParent="true"
             android:text="进货管理"
             android:textColor="@color/white"
-            android:textSize="16dp"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
     </RelativeLayout>
@@ -33,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="#B28C6F">
+        android:background="@color/primary_green">
 
         <TextView
             android:id="@+id/tv_title"
@@ -109,7 +102,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#B28C6F"
+        android:background="@color/primary_green"
         android:orientation="horizontal">
 
         <TextView
