--- a/app/src/main/res/layout/fragment_current_stock.xml
+++ b/app/src/main/res/layout/fragment_current_stock.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#B28C6F"
+        android:background="@color/primary_green"
         android:orientation="horizontal">
         <TextView
             android:id="@+id/tv_title"
