--- a/app/src/main/res/layout/fragment_customer_sales.xml
+++ b/app/src/main/res/layout/fragment_customer_sales.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#B28C6F"
+        android:background="@color/primary_green"
         android:orientation="horizontal">
 
         <TextView
@@ -80,7 +80,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#B28C6F"
+        android:background="@color/primary_green"
         android:orientation="horizontal">
 
         <TextView
