--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -45,7 +45,7 @@
             <RelativeLayout
                 android:id="@+id/relativeLayout2"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
+                android:layout_height="?attr/actionBarSize"
                 android:background="@color/primary_green"
                 android:elevation="8dp">
 
