--- a/app/src/main/res/layout/fragment_operation_record.xml
+++ b/app/src/main/res/layout/fragment_operation_record.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#B28C6F"
+        android:background="@color/primary_green"
         android:orientation="horizontal">
 
         <TextView
@@ -27,7 +27,7 @@
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#B28C6F"
+        android:background="@color/primary_green"
         style="@style/CustomTabLayout"
         app:tabMode="fixed"
         app:tabGravity="fill">
