--- a/app/src/main/res/layout/item_expense_record.xml
+++ b/app/src/main/res/layout/item_expense_record.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="38dp"
     android:orientation="horizontal"
     android:padding="8dp">
 
@@ -10,6 +10,7 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_weight="1">
             <TextView
                 android:id="@+id/tvProductName"
@@ -31,6 +32,7 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="1">
             <TextView
                 android:id="@+id/tvTotalExpense"
