--- a/app/src/main/res/layout/item_income_record.xml
+++ b/app/src/main/res/layout/item_income_record.xml
@@ -9,6 +9,7 @@
     <LinearLayout
     android:layout_width="0dp"
     android:layout_height="wrap_content"
+    android:layout_gravity="center"
     android:layout_weight="1">
         <TextView
             android:id="@+id/tvProductName"
@@ -30,6 +31,7 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_weight="1">
 
         <TextView
